PhotoPrint-0.4.1

  * Added Czech localization - thanks to Petr Kletecka

  * Fixed bug whereby the border and background paths are ignored if there's no
	preset file.


PhotoPrint-0.4.0

  * Fixed a bug which caused the Custom Command and File print queues to be
    repeated when there were no CUPS queues detected.

  * Hopefully fixed yet another crash-upon-start-with-no-preset bug - and the
    random page-size behaviour if the default queue is a PostScript queue.

  * Added some error messages if the user attempts to choose a proofing mode
    without the requisite colour profiles set up.

  * Moved non-PhotoPrint-specific Gutenprint infrastructure out to separate
	gp_cppsupport library.

  * ProfileSelector now catches and ignores corrupt profiles

  * Fixed a possible segfault if source and destination profiles are the same

  * Fixed a segfault if the user attemps to open the Image -> Set Colour Profile...
	dialog with no images selected.

  * Fixed another possible segfaul with default PPD file, in photoprint_state.cpp

  * More changes to mask routines, hopefully finally got min-is-white greyscale
    images and max-is-full-opacity alpha channels resolved.

  * Updated Russian translation - thanks to Alexandre Prokoudine.

  * Added ability to specify cell size for n-up layout

  * Added button to set the cell size to the natural size of the currently selected image

  * Fixed left/top margin issue for single layout (at last).

  * Fixed glitch in TIFF Loader - unitialized resolution variables if the image has no
	resolution set.

  * Fixed bug in .desktop file - now asks for Filenames (%F) not URIs (%U)

  * Solved problem with margins not being saved in Single, Poster and Carousel modes

  * Fixed a threading bug which caused stale CMSTransforms to be used when changing proof mode

  * Fixed drag-and-drop problem with KDE4.

  * Added mechanism for interruption to lengthy ImageSource operations.  Added support for this